- Change config option `max_header_bytes` to `max_header_size` {pull}492[492].

==== Bug fixes
- Updated systemd doc url {pull}354[354]
- Updated readme doc urls {pull}356[356]
- Use updated stack trace frame values for calculating error `grouping_keys` {pull}485[485]
- Fix panic when a signal is delivered before the server is instantiated {pull}580[580]

==== Added
- Include build time and revision in version information {pull}396[396]
- service.environment {pull}366[366]
- Consider exception or log message for grouping key when nothing else is available {pull}435[435]
- Add context.request.url.full {pull}436[436]
- Report more detail on max data size error {pull}442[442]
- Increase default 'MaxUnzippedSize' from 10mb to 50mb {pull}439[439]
- Add transaction.id to errors {pull}437[437]
- Support for uploading sourcemaps {pull}302[302].
- Support for sourcemap mapping on incoming frontend requests {pull}381[381], {pull}462[462], {pull}502[502]
- Support for `transaction.marks` {pull}430[430]
- Support for `transaction.span_count.dropped.total` {pull}448[448].
- Optional field `transaction.sampled` {pull}441[441]
- Add Kibana sourcefilter for `sourcemap.sourcemap` {pull}454[454]
- Increase default 'ConcurrentRequests' from 20 to 40 {pull}492[492]
- Change config option `frontend.sourcemapping.index` to `frontend.source_mapping.index_pattern` and remove adding a '*' by default.{pull}492[492].
- Add Config option for excluding stack trace frames from `grouping_key` calculation {pull}482[482]
- Expose expvar {pull}509[509]
- Add `process.ppid` as optional field {pull}564[564]
- Change `error.culprit` after successfully applying sourcemapping {pull}520[520]
- Make `transaction.name` optional {pull}554[554]
- Remove config files from beats. Manually add relevant config options {pull}578[578]
- Use seperate index for uploaded `source maps` {pull}582[582].
- Store original values when applying source mapping or changing `library_frame` value {pull}647[647]

==== Deprecated